@@ -3,6 +3,6 @@
 # stage3, it generates dumps during stage2 and stage3, saving them all
 # until the final compare.
 
-STAGE2_CFLAGS += -gtoggle -fdump-final-insns
+STAGE2_CFLAGS += -fdump-final-insns
 STAGE3_CFLAGS += -fdump-final-insns
 do-compare = $(SHELL) $(srcdir)/contrib/compare-debug $$f1 $$f2
