@@ -1,3 +1,10 @@
+2009-09-03  Alexandre Oliva  <aoliva@redhat.com>
+
+	* doc/invoke.texi (BUILD_CONFIG): Document --with-build-config.
+	(bootstrap-debug): Explain conditions in which it becomes default.
+	(bootstrap-debug-big): Rather than duplicate bootstrap-debug,
+	make it add to it.
+
 2009-08-18  Jakub Jelinek  <jakub@redhat.com>
 
 	* bb-reorder.c (fix_up_fall_thru_edges): Only call invert_jump
